<resources>
    <!-- STRINGS -->
    <!--Name of the app-->
    <string name="app_name">SocialVerse</string>
    <!--Titles-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_my_groups">My Groups</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_schedule">Schedule</string>
    <!--Prompts-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <!--Actions-->
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_search_tags">By Tags</string>
    <string name="action_view_schedule">Schedule</string>
    <string name="action_add_time">Add Time</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_reload">Reload</string>
    <string name="question_confirm_delete">Delete?</string>

    <!--Requests-->
    <string name="question_sign_out">Sign Out?</string>
    <string name="question_reload">Reload?</string>

    <!---->
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <!--TODO: create better strings for sign up form errors names and values -->
    <string name="invalid_first_name">Invalid First Name</string>
    <string name="invalid_last_name">Invalid Last Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_title">Invalid Title</string>
    <string name="invalid_detail">Invalid Detail</string>


    <string name="login_failed">"Login failed"</string>
    <!--Labels-->
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="label_settings">Settings</string>
    <string name="label_search">Search</string>
    <string name="label_title">Title</string>
    <string name="label_details">Details</string>
    <string name="label_time">Time</string>
    <string name="label_date">Date</string>
    <!--Hints-->
    <string name="hint_first_name">Enter your First Name</string>
    <string name="hint_last_name">Enter your Last Name</string>
    <string name="hint_email">Enter your Email</string>
    <string name="hint_password">Enter a Password</string>
    <string name="hint_group_name">Group Name</string>
    <!--Results-->
    <string name="result_failed">Operation Failed</string>
    <string name="result_wrong_username">Invalid Username</string>
    <string name="result_wrong_password">Invalid Password</string>
    <string name="result_no_network_connection">No Network Connection</string>
    <string name="result_logout_successful">Logged Out</string>
    <string name="result_saved">Saved!</string>
    <string name="result_update_successful">Update Successful</string>
    <string name="result_update_failed">Update Failed</string>
    <!-- -->
    <string name="title_activity_group">GroupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Symbols-->
    <string name="symbol_date_time_join">\@</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_title">Title</string>
    <string name="hint_message">Message</string>
    <string name="action_accept">Accept</string>
    <string name="action_ok">OK</string>
    <string name="label_message">message</string>
    <string name="error_add_title">Add a Title</string>
    <string name="error_add_message">Add a Message</string>
    <string name="error_short_message">Message must be longer</string>
    <string name="nothing_here">There is nothing here! Huh!?</string>
    <string name="header_create_post">Create Post</string>

    <!-- BOOLEANS -->
    <bool name="schedule_recycler_view_items_clickable">false</bool>

</resources>