<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/icon_refresh"
        android:title="Refresh"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/schedules"
        android:icon="@drawable/icon_clock"
        android:title="@string/action_view_schedule"
        android:visible="false"
        />
    <item
        android:id="@+id/menu_item_sign_out"
        android:icon="@drawable/icon_sign_out"
        android:title="@string/action_sign_out"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/label_settings"
        app:showAsAction="never" />

</menu>