<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.andresd.socialverse.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.andresd.socialverse.ui.main.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/navigate_to_GroupActivity"
            app:destination="@id/groupActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_my_groups"
        android:name="com.andresd.socialverse.ui.main.groups.MyGroupsFragment"
        android:label="@string/title_my_groups"
        tools:layout="@layout/fragment_my_groups" />
    <activity
        android:id="@+id/groupActivity"
        android:name="com.andresd.socialverse.ui.group.GroupActivity"
        tools:layout="@layout/activity_group">
        <!-- Test arg -->
        <argument
            android:name="group_id"
            app:argType="string" />

    </activity>


</navigation>