<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/GroupHome">

    <fragment
        android:id="@+id/GroupHome"
        android:name="com.andresd.socialverse.ui.group.GroupHomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_group_home">
        <!-- Test arg -->
        <argument
            android:name="group_id"
            app:argType="string" />
        <action
            android:id="@+id/action_GroupHome_to_scheduleFragment"
            app:destination="@id/schedules" />
        <action
            android:id="@+id/action_GroupHome_to_createPostFragment"
            app:destination="@id/createPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/schedules"
        android:name="com.andresd.socialverse.ui.group.MySchedulesListFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_my_schedules_list" >
        <action
            android:id="@+id/action_schedules_to_addScheduleFragment"
            app:destination="@id/scheduleFragment" />
    </fragment>
    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.andresd.socialverse.ui.group.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" >
        <argument
            android:name="itemIndex"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.andresd.socialverse.ui.group.CreatePostFragment"
        android:label="@string/header_create_post"
        tools:layout="@layout/fragment_create_post" />
</navigation>